Add data placeholders for session school and dates

--- a/app/views/consent/check-answers.html
+++ b/app/views/consent/check-answers.html
@@ -80,7 +80,7 @@
           } if consented,
           {
             key: "School",
-            value: "Hele’s Secondary School",
+            value: sessionSchool,
             href: basePath + "consent/school?change=true"
           },
           {
