--- a/app/views/consent/school.html
+++ b/app/views/consent/school.html
@@ -7,11 +7,7 @@
   {% set html %}
     <p>
       <span class="nhsuk-heading-m nhsuk-u-margin-bottom-0">
-        {% if secondary %}
-          Hele’s Secondary School
-        {% else %}
-          St Mary’s Primary School
-        {% endif %}
+        {{ sessionSchool }}
       </span>
       PL1 1AA
     </p>
