--- a/app/views/school/campaigns.html
+++ b/app/views/school/campaigns.html
@@ -9,7 +9,7 @@
           <h1 class="nhsuk-heading-xl">{{ title }}</h1>
 
           <h2 class="nhsuk-heading-l">
-            <a href="/school/campaign/flu">Flu vaccine – 24 November 2022</a>
+            <a href="/school/campaign/flu">Flu vaccine – {{ sessionDate | govukDate }}</a>
           </h2>
 
           <h2 class="nhsuk-heading-l">
