--- a/app/views/dpt/confirmation.html
+++ b/app/views/dpt/confirmation.html
@@ -22,14 +22,11 @@
     rows: decorateRows([
       {
         key: { text: "Date" },
-        value: { text: "Tuesday 21 November 2022" }
+        value: { text: sessionDate | date("cccc d MMMM yyyy") }
       },
       {
         key: { text: "Location" },
-        value: { text: "Hele’s Secondary School" }
-      } if secondary else {
-        key: { text: "Location" },
-        value: { text: "St Mary’s Primary School" }
+        value: { text: sessionSchool }
       },
       {
         key: { text: "Vaccine" },
