--- a/app/views/emails/flu-consent-injection.html
+++ b/app/views/emails/flu-consent-injection.html
@@ -1,12 +1,12 @@
 {% extends "layouts/email.html" %}
-{% set subject = "Flu vaccination on 24 November" %}
+{% set subject = "Flu vaccination on " + (sessionDate | date("d MMMM")) %}
 {% set name = parent.name or "Jane Doe" %}
 {% set from = "School vaccinations <school.vaccinations@nhs.net>" %}
 
 {% block email %}
   <p>Dear {{ name }},</p>
 
-  <p>You’ve told us you do not want {{ childName }} to have their flu vaccination at Boringdon Primary School on Monday 24 November because of the gelatine in the nasal spray.</p>
+  <p>You’ve told us you do not want {{ childName }} to have their flu vaccination at {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }} because of the gelatine in the nasal spray.</p>
 
   <p>A nurse will be in touch to talk about the possibility of them having an injection instead.</p>
 
