--- a/app/views/emails/flu-reminder.html
+++ b/app/views/emails/flu-reminder.html
@@ -1,11 +1,12 @@
 {% extends "layouts/email.html" %}
-{% set subject = "Please respond to our request for consent by 21 November" %}
+{% set subject = "Please respond to our request for consent by " + (deadlineDate | date("d MMMM")) %}
 {% set from = "School vaccinations <school.vaccinations@nhs.net>" %}
 
 {% block email %}
-  <p>We wrote to you recently about a visit by a local health team to [name of school] on Monday 24 November.</p>
+  <p>We wrote to you recently about a visit by a local health team to {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }}.</p>
 
-  <p>If you want your child to get the flu vaccine during this visit, you need to give consent by Friday 21 November.</p>
+  <p>If you want your child to get the flu vaccine during this visit, you need to give consent by {{ deadlineDate | date("cccc d MMMM") }}.</p>
+
 
   <p>
     <a href="/flu/start">Give or refuse consent for the flu vaccination</a>
