--- a/app/views/emails/hpv-reminder.html
+++ b/app/views/emails/hpv-reminder.html
@@ -1,11 +1,11 @@
 {% extends "layouts/email.html" %}
-{% set subject = "Please respond to our request for consent by 2 June" %}
+{% set subject = "Please respond to our request for consent by " + (deadlineDate | date("d MMMM")) %}
 {% set from = "School vaccinations <school.vaccinations@nhs.net>" %}
 
 {% block email %}
-  <p>We wrote to you recently about a visit by a local health team to [name of school] on Tuesday 6 June 2023.</p>
+  <p>We wrote to you recently about a visit by a local health team to {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }}.</p>
 
-  <p>If you want your child to receive an HPV vaccine during this visit, you need to give consent by Friday 2 June.</p>
+  <p>If you want your child to receive an HPV vaccine during this visit, you need to give consent by {{ deadlineDate | date("cccc d MMMM") }}.</p>
 
   <p>
     <a href="/hpv/start">Give or refuse consent for the HPV vaccination</a>
