--- a/app/views/school/campaign/flu-reminder-preview.html
+++ b/app/views/school/campaign/flu-reminder-preview.html
@@ -18,7 +18,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
       <h1 class="nhsuk-heading-xl">
-        <span class="nhsuk-caption-xl">22 November 2022</span>
+        <span class="nhsuk-caption-xl">{{ sessionDate | govukDate }}</span>
         {{ title }}
       </h1>
 
@@ -30,10 +30,10 @@
     <div class="govuk-grid-row nhsuk-u-margin-top-6">
       <div class="govuk-grid-column-two-thirds">
         <p>
-          We wrote to you recently about a visit by a local health team to <b>St Mary’s Primary School</b> on Tuesday 22 November 2022.
+          We wrote to you recently about a visit by a local health team to <b>St Mary’s Primary School</b> on {{ sessionDate | date("cccc d MMMM") }}.
         </p>
 
-        <p>If you want your child to receive a flu vaccine during this visit, you need to give consent by 21 November 2022 (2 days before the vaccination).</p>
+        <p>If you want your child to receive a flu vaccine during this visit, you need to give consent by {{ deadlineDate | date("cccc d MMMM") }} (2 days before the vaccination).</p>
 
         <p>This will take less than 5 minutes.</p>
 
@@ -74,9 +74,9 @@
 
       <h2 class="nhsuk-heading-m">Preview</h2>
       {{ card({
-        "heading": "Subject: Respond to our request for consent by 20&nbsp;November" | safe,
-        "headingLevel": "2",
-        "descriptionHtml": html
+        heading: "Subject: Respond to our request for consent by " + (sessionDate | date("d MMMM")),
+        headingLevel: 2,
+        descriptionHtml: html
       }) }}
     </div>
   </div>
